--- a/public/stylesheets/all.css
+++ b/public/stylesheets/all.css
@@ -129,11 +129,6 @@
   color: white;
 }
 
-#box {
-  height: 1210px;
-  width: 1442px;
-}
-
 #box #nav {
   width: 232px;
   height: 1033px;
@@ -214,4 +209,833 @@
 
 #box #conten .conponent {
   border: 15px solid #ccc;
+}
+
+#minbox {
+  width: 275px;
+  height: 157px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  border: 1px solid #ccc;
+  display: none;
+}
+
+#minbox .top {
+  width: 275px;
+  height: 44px;
+  background-color: #ccc;
+  padding: 0 10px;
+  font-size: 16px;
+  line-height: 44px;
+}
+
+#minbox .conten {
+  width: 275px;
+  height: 113px;
+  padding: 25px 10px 10px 15px;
+  font-size: 16px;
+  background-color: #fff;
+}
+
+#minbox .conten p {
+  width: 100%;
+  height: 30px;
+  padding-left: 100px;
+  margin-top: 30px;
+}
+
+#minbox .conten p span {
+  display: inline-block;
+  margin-right: 10px;
+  width: 65px;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+  cursor: pointer;
+}
+
+#minbox .conten p .yes {
+  display: inline-block;
+  background-color: blue;
+  color: white;
+}
+
+#minbox .conten p .cancel {
+  display: inline-block;
+  background-color: #ccc;
+  color: white;
+}
+
+#conponent-home #top {
+  height: 38px;
+  margin-bottom: 20px;
+  padding-left: 15px;
+}
+
+#conponent-home #top .add {
+  width: 83px;
+  height: 38px;
+  background-color: green;
+  font-size: 14px;
+  line-height: 38px;
+  color: white;
+  float: left;
+  margin-right: 15px;
+}
+
+#conponent-home #top .delete {
+  width: 83px;
+  height: 38px;
+  line-height: 38px;
+  color: black;
+  float: left;
+}
+
+#conponent-home #top .search {
+  width: 307px;
+  height: 38px;
+  line-height: 38px;
+  border: 1px solid #ccc;
+  float: right;
+}
+
+#conponent-home #top #type {
+  width: 169px;
+  height: 38px;
+  float: right;
+  margin-left: 15px;
+}
+
+#conponent-home #top .search_btn {
+  width: 83px;
+  height: 38px;
+  background-color: green;
+  float: right;
+  margin: 0 30px 0 20px;
+  color: white;
+}
+
+#conponent-home #tab {
+  border-collapse: collapse;
+  margin-left: 15px;
+}
+
+#conponent-home #tab tr {
+  width: 1145px;
+  height: 41px;
+}
+
+#conponent-home #tab tr th {
+  font-size: 14px;
+  font-weight: 200;
+  border: 1px solid #ccc;
+  padding-left: 10px;
+  text-align: left;
+  background-color: #e6e3e3;
+}
+
+#conponent-home #tab tr td {
+  font-size: 14px;
+  font-weight: 200;
+  border: 1px solid #ccc;
+  padding-left: 10px;
+  text-align: left;
+}
+
+#conponent-home #tab tr .cehck {
+  width: 52px;
+}
+
+#conponent-home #tab tr .num {
+  width: 40px;
+}
+
+#conponent-home #tab tr .name {
+  width: 190px;
+}
+
+#conponent-home #tab tr .type {
+  width: 108px;
+}
+
+#conponent-home #tab tr .old_price {
+  width: 115px;
+}
+
+#conponent-home #tab tr .new_price {
+  width: 115px;
+}
+
+#conponent-home #tab tr .have {
+  width: 105px;
+}
+
+#conponent-home #tab tr .status {
+  width: 108px;
+}
+
+#conponent-home #tab tr .add_time {
+  width: 155px;
+}
+
+#conponent-home #tab tr .do {
+  width: 175px;
+  height: 41px;
+  padding-top: 3px;
+  position: relative;
+}
+
+#conponent-home #tab tr .do .write {
+  display: inline-block;
+  width: 38px;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+  padding-top: 5px;
+  background-color: green;
+  margin-right: 5px;
+  cursor: pointer;
+}
+
+#conponent-home #tab tr .do .clear {
+  display: inline-block;
+  width: 38px;
+  height: 30px;
+  line-height: 30px;
+  padding-top: 5px;
+  text-align: center;
+  border: 1px solid #ccc;
+  margin-right: 5px;
+  cursor: pointer;
+}
+
+#conponent-home #tab tr .do .out {
+  display: inline-block;
+  width: 50px;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+  background-color: #ccc;
+  font-style: 18px;
+  color: white;
+  position: absolute;
+  top: 6px;
+  right: 20px;
+}
+
+#bottom_page {
+  width: 100%;
+  height: 30px;
+  padding-left: 400px;
+  margin-top: 50px;
+}
+
+#bottom_page .total {
+  display: inline-block;
+  font-size: 10px;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+  margin-right: 8px;
+  float: left;
+}
+
+#bottom_page .page_ul {
+  float: left;
+}
+
+#bottom_page .page_ul li {
+  list-style: none;
+  float: left;
+  font-size: 10px;
+  width: 37px;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+  border: 1px solid #ccc;
+  cursor: pointer;
+}
+
+#bottom_page .page_ul .page_active {
+  background-color: green;
+  color: white;
+}
+
+#bottom_page #page {
+  float: left;
+  width: 75px;
+  height: 32px;
+  margin: 0 20px 0 15px;
+}
+
+#bottom_page .to_page {
+  float: left;
+  display: inline-block;
+  height: 30px;
+}
+
+#bottom_page .to_page .to {
+  display: inline-block;
+  font-size: 10px;
+  margin-right: 6px;
+}
+
+#bottom_page .to_page .number {
+  width: 41px;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+  border: 1px solid #ccc;
+}
+
+#bottom_page .to_page .pages {
+  font-size: 10px;
+  margin: 0 5px 0 5px;
+}
+
+#bottom_page .to_page .btn {
+  width: 48px;
+  height: 30px;
+  line-height: 30px;
+}
+
+#background {
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+
+#background #add_goods {
+  width: 1160px;
+  height: 900px;
+  padding: 20px;
+  background-color: white;
+}
+
+#background #add_goods #name {
+  width: 100%;
+  height: 38px;
+  margin-bottom: 15px;
+}
+
+#background #add_goods #name label {
+  display: inline-block;
+  font-size: 16px;
+  height: 21px;
+  width: 85px;
+  text-align: right;
+}
+
+#background #add_goods #name div {
+  display: inline-block;
+  width: 518px;
+  height: 38px;
+  border: 1px solid #ccc;
+  margin: 0 15px 15px 15px;
+}
+
+#background #add_goods #name div .name {
+  height: 36px;
+  width: 100%;
+  border: none;
+}
+
+#background #add_goods #name span {
+  font-size: 10px;
+  color: #ccc;
+}
+
+#background #add_goods #funame {
+  width: 100%;
+  height: 38px;
+  margin-bottom: 15px;
+}
+
+#background #add_goods #funame label {
+  display: inline-block;
+  font-size: 16px;
+  height: 21px;
+  width: 85px;
+  text-align: right;
+}
+
+#background #add_goods #funame div {
+  display: inline-block;
+  width: 518px;
+  height: 38px;
+  border: 1px solid #ccc;
+  margin: 0 15px 15px 15px;
+}
+
+#background #add_goods #funame div .funame {
+  height: 36px;
+  width: 100%;
+  border: none;
+}
+
+#background #add_goods #funame span {
+  font-size: 10px;
+  color: #ccc;
+}
+
+#background #add_goods #goods_price {
+  width: 100%;
+  height: 38px;
+  margin-bottom: 15px;
+}
+
+#background #add_goods #goods_price label {
+  display: inline-block;
+  font-size: 16px;
+  height: 21px;
+  width: 85px;
+  text-align: right;
+}
+
+#background #add_goods #goods_price div {
+  display: inline-block;
+  width: 160px;
+  height: 38px;
+  border: 1px solid #ccc;
+  margin: 0 15px 15px 15px;
+}
+
+#background #add_goods #goods_price div .motoprice, #background #add_goods #goods_price div .sellprice {
+  height: 36px;
+  width: 100%;
+  border: none;
+}
+
+#background #add_goods #type {
+  width: 100%;
+  height: 38px;
+  margin-bottom: 35px;
+}
+
+#background #add_goods #type label {
+  display: inline-block;
+  font-size: 16px;
+  height: 21px;
+  width: 85px;
+  text-align: right;
+}
+
+#background #add_goods #type select {
+  display: inline-block;
+  width: 518px;
+  height: 38px;
+  border: 1px solid #ccc;
+  margin: 0 15px 15px 15px;
+}
+
+#background #add_goods #photo {
+  width: 100%;
+  height: 130px;
+  margin-bottom: 15px;
+  margin-top: 10px;
+}
+
+#background #add_goods #photo label {
+  vertical-align: top;
+  display: inline-block;
+  font-size: 16px;
+  height: 21px;
+  width: 85px;
+  text-align: right;
+}
+
+#background #add_goods #photo span {
+  display: inline-block;
+  width: 100px;
+  height: 130px;
+  margin: 0 40px 15px 15px;
+}
+
+#background #add_goods #photo span p {
+  display: inline-block;
+  margin-left: 5px;
+}
+
+#background #add_goods #have {
+  width: 100%;
+  height: 38px;
+  margin: 25px 0 35px 0;
+}
+
+#background #add_goods #have label {
+  display: inline-block;
+  font-size: 16px;
+  height: 21px;
+  width: 85px;
+  text-align: right;
+}
+
+#background #add_goods #have div {
+  display: inline-block;
+  width: 160px;
+  height: 38px;
+  border: 1px solid #ccc;
+  margin: 0 15px 15px 15px;
+}
+
+#background #add_goods #have div .have {
+  height: 36px;
+  width: 100%;
+  border: none;
+}
+
+#background #add_goods #nature {
+  width: 100%;
+  height: 30px;
+  margin-bottom: 35px;
+}
+
+#background #add_goods #nature label {
+  display: inline-block;
+  font-size: 16px;
+  height: 21px;
+  width: 85px;
+  text-align: right;
+}
+
+#background #add_goods #nature .top1 {
+  display: inline-block;
+  width: 80px;
+  height: 30px;
+  line-height: 30px;
+  background-color: #ccc;
+  color: white;
+  font-size: 12px;
+  text-align: left;
+  border: 1px solid #ccc;
+  margin: 0 15px 15px 15px;
+  position: relative;
+  padding-left: 5px;
+  cursor: pointer;
+}
+
+#background #add_goods #nature .top1 span {
+  display: inline-block;
+  float: right;
+  width: 35px;
+  height: 29px;
+}
+
+#background #add_goods #nature .top1 span .img-box {
+  width: 100%;
+  height: 100%;
+}
+
+#background #add_goods #nature .top1 .img-gou {
+  position: absolute;
+  top: 8px;
+  right: 10px;
+  display: none;
+}
+
+#background #add_goods #nature .top1:hover .img-gou {
+  display: block;
+}
+
+#background #add_goods #on_off {
+  width: 100%;
+  height: 24px;
+  line-height: 24px;
+  margin-bottom: 20px;
+}
+
+#background #add_goods #on_off label {
+  vertical-align: top;
+  display: inline-block;
+  font-size: 16px;
+  height: 24px;
+  line-height: 24px;
+  width: 85px;
+  text-align: right;
+}
+
+#background #add_goods #on_off .border {
+  display: inline-block;
+  width: 54px;
+  height: 24px;
+  line-height: 24px;
+  border: 1px solid #ccc;
+  border-radius: 12px;
+  margin: 0 15px 15px 15px;
+  cursor: pointer;
+  position: relative;
+}
+
+#background #add_goods #on_off .border .yuan {
+  display: inline-block;
+  height: 16px;
+  width: 16px;
+  border-radius: 50%;
+  background-color: #ccc;
+  margin: 4px 2px 4px 2px;
+}
+
+#background #add_goods #on_off .border span {
+  display: inline-block;
+  font-size: 12px;
+  color: #ccc;
+  height: 24px;
+  line-height: 24px;
+  position: absolute;
+  top: 0;
+  right: 3px;
+}
+
+#background #add_goods #on_off .border-active {
+  display: inline-block;
+  width: 54px;
+  height: 24px;
+  background-color: green;
+  border-radius: 12px;
+  margin: 0 15px 15px 15px;
+  cursor: pointer;
+}
+
+#background #add_goods #on_off .border-active .yuan {
+  display: inline-block;
+  height: 16px;
+  width: 16px;
+  border-radius: 50%;
+  background-color: white;
+  margin: 4px 2px 4px 2px;
+  float: right;
+}
+
+#background #add_goods #on_off .border-active span {
+  display: inline-block;
+  font-size: 12px;
+  color: white;
+  height: 24px;
+  line-height: 24px;
+  position: absolute;
+  top: 0;
+  left: 3px;
+  float: left;
+}
+
+#background #add_goods #description {
+  width: 100%;
+  height: 170px;
+  margin: 0px 0 35px 0;
+}
+
+#background #add_goods #description label {
+  vertical-align: top;
+  display: inline-block;
+  font-size: 16px;
+  height: 21px;
+  width: 85px;
+  text-align: right;
+}
+
+#background #add_goods #description .input-box {
+  display: inline-block;
+  width: 518px;
+  height: 170px;
+  border: 1px solid #ccc;
+  margin: 0 15px 15px 15px;
+}
+
+#background #add_goods #description .input-box .input {
+  height: 100%;
+  width: 100%;
+  border: none;
+}
+
+#background #add_goods #ok {
+  width: 100%;
+  height: 44px;
+  margin: 0px 0 35px 0;
+}
+
+#background #add_goods #ok label {
+  display: inline-block;
+  font-size: 16px;
+  height: 21px;
+  width: 85px;
+  text-align: right;
+}
+
+#background #add_goods #ok .btn {
+  display: inline-block;
+  width: 114px;
+  height: 44px;
+  margin: 0 15px 15px 15px;
+  background-color: green;
+  color: white;
+  border-radius: 3px;
+  font-size: 16px;
+  line-height: 44px;
+  text-align: center;
+  cursor: pointer;
+}
+
+#type-content {
+  width: 1160px;
+  height: 900px;
+  margin: 30px;
+}
+
+#type-content #top {
+  height: 38px;
+  width: 100%;
+  margin: 15px 0;
+}
+
+#type-content #top .add {
+  width: 86px;
+  height: 38px;
+  background-color: green;
+  color: white;
+  font-size: 16px;
+  text-align: center;
+}
+
+#type-content #top .delete {
+  width: 86px;
+  height: 38px;
+  border: 1px solid #ccc;
+  color: black;
+  font-size: 16px;
+  text-align: center;
+}
+
+#type-content #tab {
+  border-collapse: collapse;
+}
+
+#type-content #tab thead th {
+  border: 1px solid #ccc;
+}
+
+#type-content #tab thead .cehck {
+  width: 52px;
+  height: 41px;
+  background-color: #f2f2f2;
+}
+
+#type-content #tab thead .num {
+  height: 41px;
+  width: 40px;
+  line-height: 41px;
+  font-size: 14px;
+  font-weight: 200;
+  color: black;
+  text-align: center;
+  background-color: #f2f2f2;
+}
+
+#type-content #tab thead .type {
+  height: 41px;
+  width: 733px;
+  line-height: 41px;
+  font-size: 14px;
+  font-weight: 200;
+  padding-left: 10px;
+  text-align: left;
+  color: black;
+  background-color: #f2f2f2;
+}
+
+#type-content #tab thead .add_time {
+  width: 155px;
+  height: 41px;
+  line-height: 41px;
+  font-size: 14px;
+  font-weight: 200;
+  padding-left: 10px;
+  text-align: left;
+  color: black;
+  background-color: #f2f2f2;
+}
+
+#type-content #tab thead .do {
+  width: 111px;
+  height: 41px;
+  line-height: 41px;
+  font-size: 14px;
+  font-weight: 200;
+  padding-left: 10px;
+  text-align: left;
+  color: black;
+  background-color: #f2f2f2;
+}
+
+#type-content #tab tbody td {
+  border: 1px solid #ccc;
+}
+
+#type-content #tab tbody .cehck {
+  width: 52px;
+  height: 41px;
+}
+
+#type-content #tab tbody .num {
+  height: 41px;
+  width: 40px;
+  line-height: 41px;
+  font-size: 14px;
+  font-weight: 200;
+  color: black;
+  text-align: center;
+}
+
+#type-content #tab tbody .type {
+  height: 41px;
+  width: 733px;
+  line-height: 41px;
+  font-size: 14px;
+  font-weight: 200;
+  padding-left: 10px;
+  text-align: left;
+  color: black;
+}
+
+#type-content #tab tbody .add_time {
+  width: 155px;
+  height: 41px;
+  line-height: 41px;
+  font-size: 14px;
+  font-weight: 200;
+  padding-left: 10px;
+  text-align: left;
+  color: black;
+}
+
+#type-content #tab tbody .do {
+  width: 111px;
+  height: 41px;
+  line-height: 41px;
+  font-size: 14px;
+  font-weight: 200;
+  padding-left: 10px;
+  padding-top: 5px;
+  text-align: left;
+  color: black;
+}
+
+#type-content #tab tbody .do .write {
+  display: inline-block;
+  width: 38px;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+  background-color: green;
+  margin-right: 7px;
+  padding: 5px;
+}
+
+#type-content #tab tbody .do .clear {
+  display: inline-block;
+  width: 38px;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+  border: 1px solid #ccc;
+  padding: 5px;
 }
